[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = ""
authors = ["TJ726 <tejasvi.tj726@gmail.com>"]
readme = "README.md"
packages = [{include = "trip_planner"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
